fixed z-index menu overlapping

--- a/src/App.sass
+++ b/src/App.sass
@@ -1,31 +1,38 @@
 @import './Components/Styles/mixins.sass'
 
-.App-Burger
-  position: absolute
-  top: 0
-  right: 0
-  opacity: 1
-  transition: 400ms
-  z-index: 2
+.App
+  .App-Burger
+    position: absolute
+    top: 0
+    right: 0
+    opacity: 1
+    transition: 400ms
+    // z-index: 3
+  .SideMenu-wrapper
+    width: 100vw
+    min-height: 100vh
+    overflow-x: hidden
+    position: absolute
+    // z-index: 1
+  .view-wrapper
+    transition: filter 300ms
+    height: 100vh
+    overflow-y: scroll
+    -webkit-overflow-scrolling: touch
+    // z-index: 10
   &.true
-    opacity: 0
-    z-index: 1
-
-.SideMenu-wrapper
-  width: 100vw
-  min-height: 100vh
-  overflow-x: hidden
-  position: absolute
-
-.view-wrapper
-  transition: filter 300ms
-  height: 100vh
-  overflow-y: scroll
-  -webkit-overflow-scrolling: touch
-  &.true
-    filter: blur(15px)
-    overflow: hidden
+    .App-Burger
+      opacity: 0
+    .view-wrapper
+      filter: blur(15px)
+      overflow: hidden
+    .SideMenu-wrapper
+      z-index: 4
   +large-devices
-    padding: 0 300px 0 0
-    &.true
-      filter: blur(0)
+    .SideMenu-wrapper
+      width: 0
+      min-height: 0
+      overflow: auto
+      position: inherit
+    .view-wrapper
+      padding: 0 300px 0 0
